history endpoint